# cubrid-cci

./: .gitignore  BUILD_NUMBER  CMakeLists.txt  Makefile.in  README  README.md  aclocal.m4  build.sh  config.h.in  configure  configure.ac
cci/: CMakeLists.txt  Makefile.am  Makefile.in
cmake/: config.h.cmake  version_cci.h.cmake
include/: Makefile.in  system.h
src/base/: porting.c  porting.h
src/cci/: base_error_code.h  broker_cas_protocol.h  cas_cci.c  cas_cci.h  cci_common.h  cci_handle_mng.c  cci_handle_mng.h  cci_map.h  cci_mutex.h  cci_net_buf.h  cci_network.c  cci_network.h  cci_properties.c  cci_query_execute.c  cci_query_execute.h  cci_t_set.c  cci_util.c  cci_util.h  compat_dbtran_def.h
src/tools/: cci_applier.c  cci_applier.h  transaction_log_applier.h
tools/: CMakeLists.txt
win/: build.bat  cci_version.h  config.h  version.h
win/api/: cubrid_api.h
win/cas_cci/: cas_cci.vcxproj  cas_cci_v110_dll.vcxproj  cas_cci_v110_lib.vcxproj  cas_cci_v140_dll.vcxproj  cas_cci_v140_lib.vcxproj
win/cascci/: cascci.def  cascci_v141_dll.vcxproj
